LConf Changelog
===============

NOTE: Please read doc/UPGRADING for detailed information on changes and
upgrade information!

1.4.0 - XX/XX/2013

ENHANCEMENTS
* re-add services below hostgroup linked to hosts #2136

1.3.0 - 27/05/2013

ENHANCEMENTS
* add TreeRewrite (None or MainOverLink)
* add LConfSlaveExportRules
* LDAP Paging support #796
* add display_name in schema #1115
* add notes in schema #1117
* add new host- and service-linker #1245
* LCONF->EXPORT->MODIFY->SERVICE/HOST inheritance #1249
* Add contactgroup_members attribute to contactgroup objectclass #1291
* More and better Debugging Output during import / export #1404
* add Service Flag is_volatile #1448
* Diff-Export #1765
* make path to custom/{pre,mid,post} scripts configurable #1788
* add spec file #1790
* make path to default-templates.cfg configurable #1802
* rename contrib/lconf_deploy.sh to contrib/LConfDeploy.sh; add make install option #1828
* add service parameter flap_threshold #1856
* SlaveSync: allow icinga perfdata* dirs and command pipe to be set through configure #1864
* distributed passive master: enable master config change on export (cfg option), introduce mid-master.pl #1866
* LConfSlaveExportRules: do not export parents/dependencies (opt-in cfg option) #1872
* LConfExport: redesign export strategy in regard of external scripts (mid.pl etc) #1874
* Possibility to delete a lconf property #1914
* add startTLS support #1916
* add tools for converting old to new ldap config format #2028
* add a note about the template tree to docs #2072
* add initscript for LConfSlaveSync to contrib/ #2076
* create a doc section describing config options for 1.3.0 #2088
* LConfSlaveSync: add configure options for pidfile and debug log #2090
* add make-tarball script, and make create-tarball option #2092

FIXES
* Inheritance of disable values #589
* dash in customvars #736
* LConfSlaveExport.pl and Template Directory #879
* docs: install on suse #1187